# image_datasets

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-testing.yml
src/image_datasets/core/: configs.py  constants.py  license.py  types.py
src/image_datasets/core/resources/: licenses.json
src/image_datasets/core/schemas/: __init__.py  classification.py
src/image_datasets/datasets/mnist/: mnist.py
templates/: base_template.py  basic_template.py  cookiecutter.json  generate_cookiecutter_json.py
templates/{{ cookiecutter.__module_dataset_name }}/: {{ cookiecutter.__module_dataset_name }}.py
templates/{{ cookiecutter.pkg_name }}/: {{ cookiecutter.pkg_name }}.py
tests/: test_foo.py
